# retdec

.github/workflows/: outrider-daily.yml  outrider.yml
cmake/: options.cmake
include/retdec/anchor_emitter/: anchor_emitter.h
src/: CMakeLists.txt
src/anchor_emitter/: CMakeLists.txt  anchor_emitter.cpp  retdec-anchor-emitter-config.cmake
src/retdec-decompiler/: CMakeLists.txt  retdec-decompiler.cpp
support/yara_patterns/tools/pe/x86/: installers.yara  packers.yara
tests/: CMakeLists.txt
tests/anchor_emitter/: CMakeLists.txt  anchor_emitter_tests.cpp
